# FR-Arbitrage

./: .env.example  .gitignore  README.md  USAGE.md  check_meta.py  coin_check.py  find_spot_names.py  pyproject.toml  yield_harvester.db
src/: backtest.py
src/fr_arbitrage/: __init__.py  config.py  database.py  main.py  market_data.py  market_scanner.py  mocks.py  models.py  order_manager.py  position_guardian.py  virtual_wallet.py
src/fr_arbitrage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tools/: fetch_data.py
