[project]
name = "fr-arbitrage"
version = "0.1.0"
description = "Delta-neutral FR arbitrage bot for high-volatility altcoins"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
fr-arbitrage = "fr_arbitrage.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
