[project]
name = "fr-arbitrage"
version = "0.2.0"
description = "Hyperliquid Yield Harvester — Delta-neutral FR arbitrage bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperliquid-python-sdk>=0.9",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
]

[project.scripts]
fr-arbitrage = "fr_arbitrage.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
